microservices/basic-API:v5 Added DELETE method and basic SWAGGER docs
