# microservices/6_API-swagger-doc/product-api/swagger.yaml
@@ -9,7 +9,9 @@ definitions:
                 type: string
                 x-go-name: Description
             id:
+                description: the id for this user
                 format: int64
+                minimum: 1
                 type: integer
                 x-go-name: ID
             name:
@@ -22,6 +24,8 @@ definitions:
             sku:
                 type: string
                 x-go-name: SKU
+        required:
+            - id
         type: object
         x-go-package: product-api/data
 info:
@@ -38,9 +42,28 @@ paths:
                     $ref: '#/responses/productResponse'
             tags:
                 - products
+    /products/{id}:
+        delete:
+            description: Returns a list of products
+            operationId: deleteProduct
+            parameters:
+                - description: The id of the product to delete from the database
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "201":
+                    $ref: '#/responses/noContent'
+            tags:
+                - products
 produces:
     - application/json
 responses:
+    noContent:
+        description: ""
     productsResponse:
         description: A list of products returns in the response
         schema:
